# appointment

./: .editorconfig  .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 0104d1d44b1a_initial_schema.py  2a84693e21bb_update_appointment_model_for_accept_.py  3817cfc032ba_create_users_table.py  591bb6b5165b_add_status_and_cancelled_at_to_.py  7f2c0186c829_add_cancel_reason.py  97f594193f49_create_appointments_services_and_admin_.py  a620f2e69411_update_service_model.py  bee5c2ec9d7b_add_auth_provider_and_allow_nullable_.py  da9ba533e40d_create_all_tables.py
src/: app.py
src/core/: logging_config.py  mail.py  oauth.py  security.py  settings.py
src/core/db/: dependencies.py  session.py
src/core/exceptions/: __init__.py  admin_availability_exception.py  admin_daily_limit_exception.py  appointment_exception.py  base_exception.py  error_handlers.py  services_exception.py  user_expection.py
src/dependencies/: auth_dependencies.py  pagination_dependencies.py
src/enums/: __init__.py  appointment_status.py  appointment_weekday.py  auth_provider.py  date_filter.py  payments_method.py  user_date_filter.py
src/models/: __init__.py  admin_availability_model.py  admin_daily_limit_model.py  admin_daily_override_model.py  admin_weekly_capacity_model.py  appointment_model.py  appointment_service_model.py  constants.py  service_model.py  user_model.py  user_role.py
src/repositories/: admin_daily_limit_repository.py  appointments_repository.py  services_repository.py  user_repository.py
src/repositories/interfaces/: admin_daily_limit_interface.py  appointments_interface.py  services_interface.py  user_interface.py
src/routers/: admin_daily_limit_router.py  appointments_router.py  auth_router.py  services_router.py  user_router.py
src/schemas/: __init__.py  admin_daily_limit_schema.py  appointments_schema.py  services_schema.py  token_schema.py  user_schema.py
src/services/: admin_daily_limit_service.py  appointments_service.py  auth_dependencies.py  auth_service.py  notification_service.py  services_service.py  user_service.py
src/templates/emails/: welcome.html
src/templates/emails/styles/: welcome.css
src/utils/: __init__.py  date_filters.py
