[project]
name = "appointment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kasiliana Oliveira", email = "kasilianaoliveira@gmail.com" },
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "alembic>=1.16.4,<2.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "bcrypt>=4.3.0,<5.0.0",
    "fastapi-pagination>=0.15.4",
    "fastapi[standard]>=0.116.1,<0.117.0",
    "psycopg2-binary>=2.9.10,<2.10.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.10.1,<2.11.0",
    "pydantic[email]>=2.11.7,<2.12.0",
    "pyjwt>=2.10.1,<2.11.0",
    "sqlalchemy[asyncio]>=2.0.42,<2.1.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "ruff>=0.12.8,<1.0.0",
    "taskipy>=1.14.1,<2.0.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']
exclude = ["alembic/*"]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]


[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'


[tool.taskipy.tasks]
lint = 'ruff check'
fix = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'
makemigrations = 'alembic revision --autogenerate -m'
migrationsate = 'alembic current'
migratehistory = 'alembic history'
migrate = 'alembic upgrade head'


[project.urls]
Homepage = "https://github.com/kasilianaoliveira/appointment-services"
Documentation = "https://github.com/kasilianaoliveira/appointment-services"
Repository = "https://github.com/kasilianaoliveira/appointment-services"


[project.scripts]
dockerscript = "dockerscript.script:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/application",
    "src/domain",
    "src/infrastructure",
    "src/interfaces",
    "src/core",
]
